fixed alignment

--- a/src/Component/Education/Education.css
+++ b/src/Component/Education/Education.css
@@ -1,5 +1,4 @@
 .education_section {
-    padding: 5rem 0 2rem 0;
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -38,8 +37,18 @@
     align-items: center;
 }
 
+@media only screen and (min-width: 601px) and (max-width: 1000px) {
+
+    .education_section {
+        padding: 5rem 0 2rem 0;
+    }
+}
 
 @media only screen and (max-width: 600px) {
+
+    .education_section {
+        padding: 5rem 0 2rem 0;
+    }
     
     .education_box {
         width: 17rem;
